--- a/styles/main.css
+++ b/styles/main.css
@@ -7,39 +7,68 @@ body {
   line-height: 20px; }
 
 button {
-  border: 1px solid #076fe4;
-  border-radius: 3px;
-  box-shadow: inset 0 1px 0 0 #8ebcf1;
-  color: white;
-  display: inline-block;
-  font-size: 11px;
-  font-weight: bold;
-  background-color: #4294f0;
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #4294f0), color-stop(100%, #0776f3));
-  background-image: -webkit-linear-gradient(#4294f0, #0776f3);
-  background-image: linear-gradient(#4294f0, #0776f3);
-  padding: 7px 18px;
-  text-decoration: none;
-  text-shadow: 0 1px 0 #0065d6;
-  background-clip: padding-box;
+  background: #6464ff;
+  color: #fff;
   display: block;
   position: absolute;
   text-transform: capitalize;
+  border: none;
   top: 50%;
   left: 50%;
-  width: 90px;
-  margin-left: -45px;
-  text-align: center; }
-  button:hover:not(:disabled) {
-    box-shadow: inset 0 1px 0 0 #60a2ec;
-    cursor: pointer;
-    background-color: #2f87ea;
-    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #2f87ea), color-stop(100%, #086fe3));
-    background-image: -webkit-linear-gradient(#2f87ea, #086fe3);
-    background-image: linear-gradient(#2f87ea, #086fe3); }
-  button:active:not(:disabled) {
-    border: 1px solid #076fe4;
-    box-shadow: inset 0 0 8px 4px #0868d3, inset 0 0 8px 4px #0868d3, 0 1px 1px 0 #eeeeee; }
-  button:disabled {
-    opacity: 0.5;
-    cursor: not-allowed; }
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-top: -20px;
+  margin-left: -20px;
+  cursor: pointer;
+  text-align: center;
+  -webkit-animation: throb 2s infinite;
+  -moz-animation: throb 2s infinite;
+  animation: throb 2s infinite;
+  outline: none; }
+
+@-webkit-keyframes throb {
+  0% {
+    -webkit-transform: scale(1); }
+
+  10% {
+    -webkit-transform: scale(1.125);
+    -webkit-animation-timing-function: cubic-bezier(0.5, 0, 0.5, 1); }
+
+  20% {
+    -webkit-transform: scale(1);
+    -webkit-animation-timing-function: cubic-bezier(0.8, 0, 0.8, 1); } }
+
+@-moz-keyframes throb {
+  0% {
+    -moz-transform: scale(1); }
+
+  10% {
+    -moz-transform: scale(1.125);
+    -moz-animation-timing-function: cubic-bezier(0.5, 0, 0.5, 1); }
+
+  20% {
+    -moz-transform: scale(1);
+    -moz-animation-timing-function: cubic-bezier(0.8, 0, 0.8, 1); } }
+
+@-o-keyframes throb {
+  0% {
+    -o-transform: scale(1); }
+
+  10% {
+    -o-transform: scale(1.125); }
+
+  20% {
+    -o-transform: scale(1); } }
+
+@keyframes throb {
+  0% {
+    transform: scale(1); }
+
+  10% {
+    transform: scale(1.125);
+    animation-timing-function: cubic-bezier(0.5, 0, 0.5, 1); }
+
+  20% {
+    transform: scale(1);
+    animation-timing-function: cubic-bezier(0.8, 0, 0.8, 1); } }
