--- a/styles/main.scss
+++ b/styles/main.scss
@@ -15,18 +15,44 @@ body {
 
 button {
 
-  @include button();
+  // @include button();
+  background: rgb(100, 100, 255);
+  color: #fff;
 
   display: block;
   position: absolute;
   text-transform: capitalize;
+  border: none;
 
   top: 50%;
   left: 50%;
 
-  width: 90px;
-  margin-left: -45px;
+  $size: 40px;
+
+  width: $size;
+  height: $size;
+  border-radius: 50%;
+
+  margin-top: - $size / 2;
+  margin-left: - $size / 2;
+  cursor: pointer;
 
   text-align: center;
+  @include animation(throb 2s infinite);
+  outline: none;
 
+}
+
+@include keyframes(throb) {
+  0% {
+    @include transform(scale(1.0));
+  }
+  10% {
+    @include transform(scale(1.125));
+    @include animation-timing-function(cubic-bezier(.5, 0, .5, 1));
+  }
+  20% {
+    @include transform(scale(1.0));
+    @include animation-timing-function(cubic-bezier(.8, 0, .8, 1));
+  }
 }
